# AmlAssig3

./: Assignment_3_new.ipynb  README.md  prepare_data.py  pyproject.toml
data/yolo_data/: dataset.yaml
data/yolo_data/labels/test/: FudanPed00003.txt  FudanPed00013.txt  FudanPed00023.txt  FudanPed00037.txt  FudanPed00043.txt  FudanPed00046.txt  PennPed00017.txt  PennPed00032.txt  PennPed00036.txt  PennPed00062.txt  PennPed00071.txt  PennPed00073.txt  PennPed00093.txt
data/yolo_data/labels/train/: FudanPed00004.txt  FudanPed00006.txt  FudanPed00007.txt  FudanPed00008.txt  FudanPed00009.txt  FudanPed00011.txt  FudanPed00012.txt  FudanPed00015.txt  FudanPed00018.txt  FudanPed00021.txt  FudanPed00024.txt  FudanPed00028.txt  FudanPed00029.txt  FudanPed00033.txt  FudanPed00034.txt  FudanPed00035.txt  FudanPed00036.txt  FudanPed00038.txt  FudanPed00041.txt  FudanPed00042.txt  FudanPed00044.txt  FudanPed00045.txt  FudanPed00047.txt  FudanPed00049.txt  FudanPed00051.txt  FudanPed00053.txt  FudanPed00054.txt  FudanPed00058.txt  FudanPed00059.txt  FudanPed00060.txt  FudanPed00062.txt  FudanPed00063.txt  FudanPed00064.txt  FudanPed00065.txt  FudanPed00067.txt  FudanPed00071.txt  FudanPed00072.txt  FudanPed00073.txt  FudanPed00074.txt  PennPed00001.txt  (+56 more)
data/yolo_data/labels/val/: FudanPed00010.txt  FudanPed00016.txt  FudanPed00017.txt  FudanPed00019.txt  FudanPed00020.txt  FudanPed00025.txt  FudanPed00031.txt  FudanPed00032.txt  FudanPed00052.txt  FudanPed00056.txt  FudanPed00061.txt  FudanPed00070.txt  PennPed00002.txt  PennPed00003.txt  PennPed00009.txt  PennPed00020.txt  (+11 more)
